<resources>
    <string name="app_name">Base</string>
    <string name="please_input_phone">请输入账号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="register_phone">注册新用户</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="register_new_user">注册新用户</string>
    <string name="register">注册</string>
    <string name="fg_me_setting">设置</string>
    <string name="find_you_want">搜索感兴趣的内容</string>
    <string name="fg_me_tv_star">积分</string>
    <string name="fg_me_tv_ranking">排行榜</string>
    <string name="fg_me_tv_grade">积分等级</string>

</resources>
