<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.allens.base.fragment.LoginFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fg_login_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/fg_login_img_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="29dp"
            android:background="@null"
            android:hint="@string/please_input_phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/res_ed_cursor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fg_login_img_icon"
            tools:ignore="TextFields" />

        <View
            android:id="@+id/login_phone_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="29dp"
            android:background="#DDDDDD"
            app:layout_constraintLeft_toLeftOf="@+id/et_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <ImageView
            android:id="@+id/login_img_delete"
            visible="@{viewModel.userName.length()>0}"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_login_account_delete"
            app:layout_constraintRight_toRightOf="@+id/login_phone_view"
            app:layout_constraintTop_toTopOf="@+id/et_phone" />


        <EditText
            android:id="@+id/et_pwd"
            transformationMethod="@{viewModel.pwdCanShow.booleanValue()}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="29dp"
            android:background="@null"
            android:hint="@string/please_input_pwd"
            android:inputType="textPassword"
            android:maxLength="12"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/res_ed_cursor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_phone_view" />

        <View
            android:id="@+id/login_pwd_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="29dp"
            android:background="#DDDDDD"
            app:layout_constraintLeft_toLeftOf="@+id/et_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pwd" />

        <ImageView
            android:id="@+id/login_img_show"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"
            android:src="@{viewModel.pwdCanShow.booleanValue() ? @drawable/ic_login_pwd_show : @drawable/ic_login_pwd_hint,default=@drawable/ic_login_pwd_hint}"
            app:layout_constraintRight_toRightOf="@+id/login_phone_view"
            app:layout_constraintTop_toTopOf="@+id/et_pwd" />


        <TextView
            android:id="@+id/login_btn_login"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/res_bg_radius_blue"
            android:clickable="@{viewModel.loginClickAble.booleanValue()}"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@+id/login_pwd_view"
            app:layout_constraintRight_toRightOf="@+id/login_pwd_view"
            app:layout_constraintTop_toBottomOf="@+id/login_pwd_view" />

        <TextView
            android:id="@+id/register_new_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/register_phone"
            android:textColor="#ff888888"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="@+id/login_btn_login"
            app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/forget_pwd"
            android:textColor="#ff888888"
            android:textSize="13sp"
            app:layout_constraintRight_toRightOf="@+id/login_btn_login"
            app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>